Opened 10 years ago

Closed 10 years ago

#11976 closed bug (fixed)

Debugger call: Deleting a BLayout that still has items. Subclass hooks will not be called

Reported by: anevilyak Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Servers/notification_server Version: R1/Development
Keywords: Cc: mmlr
Blocked By: Blocking:
Platform: All

Description

Following the layout kit changes in hrev49040, I was greeted by the above crash on a freshly booted image while it was in the process of generating ssh keys and other first boot steps. Report attached.

Attachments (1)

notification_server-629-debug-15-04-2015-21-52-49.report (9.0 KB ) - added by anevilyak 10 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by mmlr, 10 years ago

The case for the notification server is fixed in hrev49045 by removing the views from the window instead of the layout.

The underlying issue of how BLayout::RemoveView() should work remains open though.

comment:2 by mmlr, 10 years ago

Resolution: fixed
Status: newclosed

Underlying issue resolved in hrev49048. The parent layout deleted the layout of the child which it does not own.

Note: See TracTickets for help on using tickets.